* Added libusbhid1 and libusbhid-dev.   * Updated libcam to version 5.4.   * Provide a copyright file.   * Get the necessary files directly from kfreebsd-source-5.4.   * Make -dev packages depends on libc0.1-dev | libc-dev.   * Ship some missing manpages.   * Build with -02.   * Added myself to uploaders.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@883 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+freebsd-libs (5.4-2) unreleased; urgency=low
+
+  * Added libusbhid1 and libusbhid-dev.
+  * Updated libcam to version 5.4.
+  * Provide a copyright file.
+  * Get the necessary files directly from kfreebsd-source-5.4.
+  * Make -dev packages depends on libc0.1-dev | libc-dev.
+  * Ship some missing manpages.
+  * Build with -02.
+  * Added myself to uploaders.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Sun, 18 Dec 2005 03:59:30 +0100
+
 freebsd-libs (5.4-1) unreleased; urgency=low
 
   * Initial release.
