* libusbhid: include <bsd/bsd.h> and link with -lbsd.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@884 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+freebsd-libs (5.4-3) unreleased; urgency=low
+
+  * libusbhid: include <bsd/bsd.h> and link with -lbsd.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Sun, 18 Dec 2005 04:57:17 +0100
+
 freebsd-libs (5.4-2) unreleased; urgency=low
 
   * Added libusbhid1 and libusbhid-dev.
