--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+freebsd-libs (5.4-4) unreleased; urgency=low
+
+  * Bumped Standard-Versions to 3.6.2 (no changes).
+  * Improved descriptions.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Tue, 20 Dec 2005 01:51:03 +0100
+
 freebsd-libs (5.4-3) unreleased; urgency=low
 
   * libusbhid: include <bsd/bsd.h> and link with -lbsd.
