* Renamed libsrbuf to libfreebsd and added nlist.   * Added libkvm from old package freebsd-kvm-5.2.1. Some parts are still     disabled, but less than in the previous version.   * Ship a shared library, so that packages will benefit from improvements     of the library.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@909 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+freebsd-libs (5.4-5) unreleased; urgency=low
+
+  * Renamed libsrbuf to libfreebsd and added nlist.
+  * Added libkvm from old package freebsd-kvm-5.2.1. Some parts are still
+    disabled, but less than in the previous version.
+  * Ship a shared library, so that packages will benefit from improvements
+    of the library.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Tue, 20 Dec 2005 20:56:06 +0100
+
 freebsd-libs (5.4-4) unreleased; urgency=low
 
   * Bumped Standard-Versions to 3.6.2 (no changes).
