Added libipx to freebsd-libs
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@912 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+freebsd-libs (5.4-6) unreleased; urgency=low
+
+  * Added libipx. 
+
+ -- Aurelien Jarno <aurel32@debian.org>  Tue, 20 Dec 2005 23:18:51 +0100
+
 freebsd-libs (5.4-5) unreleased; urgency=low
 
   * Renamed libsrbuf to libfreebsd and added nlist.
