Misc amd64 fixes.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@1310 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+freebsd-libs (5.4-7) UNRELEASED; urgency=low
+
+  * Add kfreebsd-amd64.
+
+ -- Robert Millan <rmh@aybabtu.com>  Sat,  4 Mar 2006 20:34:20 +0100
+
 freebsd-libs (5.4-6) unreleased; urgency=low
 
   * Added libipx. 
