--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 freebsd-libs (5.4-7) UNRELEASED; urgency=low
 
   * Add kfreebsd-amd64.
+  * libkvm0 is Priority: required (needed for freebsd-utils).
 
- -- Robert Millan <rmh@aybabtu.com>  Sat,  4 Mar 2006 20:34:20 +0100
+ -- Robert Millan <rmh@aybabtu.com>  Mon, 20 Mar 2006 16:29:09 +0100
 
 freebsd-libs (5.4-6) unreleased; urgency=low
 
