--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 freebsd-libs (5.4-7) UNRELEASED; urgency=low
 
   * Add kfreebsd-amd64.
+  * Add missing libgdbm-dev to Build-Depends.
 
- -- Robert Millan <rmh@aybabtu.com>  Sat,  4 Mar 2006 20:34:20 +0100
+ -- Robert Millan <rmh@aybabtu.com>  Sat, 25 Mar 2006 21:01:17 +0100
 
 freebsd-libs (5.4-6) unreleased; urgency=low
 
