--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ freebsd-libs (5.4-7) UNRELEASED; urgency=low
 
   * Add kfreebsd-amd64.
   * Add missing libgdbm-dev to Build-Depends.
+  * Move shared object so /lib (unfucks freebsd-utils).
 
- -- Robert Millan <rmh@aybabtu.com>  Sat, 25 Mar 2006 21:01:17 +0100
+ -- Robert Millan <rmh@aybabtu.com>  Sat, 25 Mar 2006 21:01:49 +0100
 
 freebsd-libs (5.4-6) unreleased; urgency=low
 
