--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-freebsd-libs (5.4-7) UNRELEASED; urgency=low
+freebsd-libs (5.4-7) unreleased; urgency=low
 
   * Add kfreebsd-amd64.
   * Add missing libgdbm-dev to Build-Depends.
