--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,19 @@
+freebsd-libs (5.4-9) UNRELEASED; urgency=low
+
+  * foo
+
+ -- Robert Millan <rmh@aybabtu.com>  Wed, 29 Mar 2006 20:38:39 +0200
+
+freebsd-libs (5.4-8) unreleased; urgency=low
+
+  * First build on amd64.
+  * Lots of cleanup:
+    - Remove functions that are in libfreebsd
+    - Use dynamic regexps to get rid of many patch hunks.
+    - Reenable most commented code (thanks to new functions in libfreebsd).
+
+ -- Robert Millan <rmh@aybabtu.com>  Wed, 29 Mar 2006 20:38:08 +0200
+
 freebsd-libs (5.4-7) unreleased; urgency=low
 
   * Add kfreebsd-amd64.
