--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 freebsd-libs (5.4-9) UNRELEASED; urgency=low
 
-  * foo
+  * Add libgeom.
 
  -- Robert Millan <rmh@aybabtu.com>  Wed, 29 Mar 2006 20:38:39 +0200
 
