--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
-freebsd-libs (5.4+1-1) UNRELEASED; urgency=low
+freebsd-libs (5.4+1-1) unreleased; urgency=low
 
   * Add libgeom.
+  * Major patch and variable cleanup/refactor to sanitise SHLIB_MAJOR and
+    SHLIBDIR overrides.
 
- -- Robert Millan <rmh@aybabtu.com>  Wed, 29 Mar 2006 20:38:39 +0200
+ -- Robert Millan <rmh@aybabtu.com>  Wed, 19 Apr 2006 10:32:23 +0200
 
 freebsd-libs (5.4-8) unreleased; urgency=low
 
