* Link libgeom with librt (to get clock_gettime).
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@1456 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+freebsd-libs (5.4+1-2) unreleased; urgency=low
+
+  * Link libgeom with librt (to get clock_gettime).
+
+ -- Robert Millan <rmh@aybabtu.com>  Wed, 19 Apr 2006 11:17:18 +0200
+
 freebsd-libs (5.4+1-1) unreleased; urgency=low
 
   * Add libgeom.
