--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+freebsd-libs (5.4+1-3) UNRELEASED; urgency=low
+
+  * Add libkiconv (patch from Andraz).
+
+ -- Robert Millan <rmh@aybabtu.com>  Thu,  4 May 2006 17:14:34 +0200
+
 freebsd-libs (5.4+1-2) unreleased; urgency=low
 
   * Link libgeom with librt (to get clock_gettime).
