--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+freebsd-libs (6.1-0.1) UNRELEASED; urgency=low
+  
+  [ Petr Salinger ]
+  * based on FreeBSD 6.1
+
+ -- Robert Millan <rmh@aybabtu.com>  Fri, 25 Aug 2006 09:46:47 +0200
+
 freebsd-libs (5.4+1-3) UNRELEASED; urgency=low
 
   * Add libkiconv (patch from Andraz).
