--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,15 @@
-freebsd-libs (6.1-0.1) UNRELEASED; urgency=low
-  
+freebsd-libs (6.1-0.1) unreleased; urgency=low
+
   [ Petr Salinger ]
   * based on FreeBSD 6.1
 
- -- Robert Millan <rmh@aybabtu.com>  Fri, 25 Aug 2006 09:46:47 +0200
+  [ Aurelien Jarno ]
+  * Bumped Standards-Version to 3.7.2 (no changes).
+  * Change packages name to reflect SONAME changes:
+    - libusbhid1 -> libusbhid2
+    - libkiconv1 -> libkiconv2
+
+ -- Aurelien Jarno <aurel32@debian.org>  Wed, 25 Oct 2006 16:49:43 +0200
 
 freebsd-libs (5.4+1-3) UNRELEASED; urgency=low
 
