--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+freebsd-libs (6.1-2) UNRELEASED; urgency=low
+
+  [ Petr Salinger ]
+  * revert r1694, these libraries are located in /lib/, 
+    but dev symlink pointed to /usr/lib/
+    breaks many packages using libkm-dev or libgeom-dev 
+
+ -- Aurelien Jarno <aurel32@debian.org>  Wed, 25 Oct 2006 16:49:43 +0200
+
 freebsd-libs (6.1-1) unreleased; urgency=low
 
   [ Petr Salinger ]
