--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-freebsd-libs (6.1-2) UNRELEASED; urgency=low
+freebsd-libs (6.1-2) unreleased; urgency=low
 
   [ Petr Salinger ]
-  * revert r1694, these libraries are located in /lib/, 
+  * revert r1694, these libraries are located in /lib/,
     but dev symlink pointed to /usr/lib/
-    breaks many packages using libkvm-dev or libgeom-dev 
+    breaks many packages using libkvm-dev or libgeom-dev
 
- -- Aurelien Jarno <aurel32@debian.org>  Wed, 25 Oct 2006 16:49:43 +0200
+ -- Aurelien Jarno <aurel32@debian.org>  Tue, 28 Nov 2006 17:09:28 +0100
 
 freebsd-libs (6.1-1) unreleased; urgency=low
 
