* freebsd-libs based on FreeBSD 6.2
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@1867 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+freebsd-libs (6.2-0.1) UNRELEASED; urgency=low
+
+  [ Petr Salinger ]
+  * based on FreeBSD 6.2
+
+ -- Aurelien Jarno <aurel32@debian.org>  Tue, 28 Nov 2006 17:09:28 +0100
+
 freebsd-libs (6.1-2) unreleased; urgency=low
 
   [ Petr Salinger ]
