--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-freebsd-libs (6.2-0.1) UNRELEASED; urgency=low
+freebsd-libs (6.2-1) unreleased; urgency=low
 
   [ Petr Salinger ]
   * based on FreeBSD 6.2
 
- -- Aurelien Jarno <aurel32@debian.org>  Tue, 28 Nov 2006 17:09:28 +0100
+ -- Aurelien Jarno <aurel32@debian.org>  Mon, 15 Jan 2007 13:42:46 +0100
 
 freebsd-libs (6.1-2) unreleased; urgency=low
 
