--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+freebsd-libs (6.3-0.1) UNRELEASED; urgency=low
+
+  [ Petr Salinger ]
+  * based on FreeBSD 6.3
+
+ -- Aurelien Jarno <aurel32@debian.org>  Mon, 03 Dec 2007 21:19:42 +0100
+
 freebsd-libs (6.2-1) unreleased; urgency=low
 
   [ Petr Salinger ]
