* freebsd-libs: new binary packages libdevstat5 and libdevstat-dev
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@2084 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ freebsd-libs (6.3-0.1) UNRELEASED; urgency=low
 
   [ Petr Salinger ]
   * based on FreeBSD 6.3
+  * new binary packages libdevstat5 and libdevstat-dev
 
  -- Aurelien Jarno <aurel32@debian.org>  Mon, 03 Dec 2007 21:19:42 +0100
 
