--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,13 @@
-freebsd-libs (6.3-0.1) UNRELEASED; urgency=low
+freebsd-libs (6.3-1) unreleased; urgency=low
 
   [ Petr Salinger ]
   * based on FreeBSD 6.3
   * new binary packages libdevstat5 and libdevstat-dev
 
- -- Aurelien Jarno <aurel32@debian.org>  Mon, 03 Dec 2007 21:19:42 +0100
+  [ Aurelien Jarno ]
+  * Bumped Standards-Version to 3.7.3 (no changes).
+
+ -- Aurelien Jarno <aurel32@debian.org>  Thu, 10 Jan 2008 12:15:32 +0100
 
 freebsd-libs (6.2-1) unreleased; urgency=low
 
