--- a/debian/changelog
+++ b/debian/changelog
@@ -6,8 +6,9 @@ freebsd-libs (6.3-1) unreleased; urgency=low
 
   [ Aurelien Jarno ]
   * Bumped Standards-Version to 3.7.3 (no changes).
+  * Change ${Source-Version} into ${binary:Version}. 
 
- -- Aurelien Jarno <aurel32@debian.org>  Thu, 10 Jan 2008 12:15:32 +0100
+ -- Aurelien Jarno <aurel32@debian.org>  Thu, 10 Jan 2008 13:42:20 +0100
 
 freebsd-libs (6.2-1) unreleased; urgency=low
 
