--- a/debian/changelog
+++ b/debian/changelog
@@ -6,9 +6,11 @@ freebsd-libs (6.3-1) unreleased; urgency=low
 
   [ Aurelien Jarno ]
   * Bumped Standards-Version to 3.7.3 (no changes).
-  * Change ${Source-Version} into ${binary:Version}. 
+  * Change ${Source-Version} into ${binary:Version}.
+  * Don't use ${shlibs:Depends} ofr -dev packages.
+  * Only link with needed libraries.
 
- -- Aurelien Jarno <aurel32@debian.org>  Thu, 10 Jan 2008 13:42:20 +0100
+ -- Aurelien Jarno <aurel32@debian.org>  Thu, 10 Jan 2008 18:23:48 +0100
 
 freebsd-libs (6.2-1) unreleased; urgency=low
 
