--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+freebsd-libs (6.3-2) UNRELEASED; urgency=low
+
+  [ Aurelien Jarno ]
+  * Don't ship useless manpages.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Fri, 11 Jan 2008 10:53:31 +0100
+
 freebsd-libs (6.3-1) unreleased; urgency=low
 
   [ Petr Salinger ]
