--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,9 @@ freebsd-libs (6.3-2) UNRELEASED; urgency=low
   [ Aurelien Jarno ]
   * Don't ship useless manpages.
 
+  [ Petr Salinger ]
+  * Make it buildable with gcc-4.2
+
  -- Aurelien Jarno <aurel32@debian.org>  Fri, 11 Jan 2008 10:53:31 +0100
 
 freebsd-libs (6.3-1) unreleased; urgency=low
@@ -14,7 +17,7 @@ freebsd-libs (6.3-1) unreleased; urgency=low
   [ Aurelien Jarno ]
   * Bumped Standards-Version to 3.7.3 (no changes).
   * Change ${Source-Version} into ${binary:Version}.
-  * Don't use ${shlibs:Depends} ofr -dev packages.
+  * Don't use ${shlibs:Depends} for -dev packages.
   * Only link with needed libraries.
 
  -- Aurelien Jarno <aurel32@debian.org>  Thu, 10 Jan 2008 18:23:48 +0100
