--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+freebsd-libs (7.0-1) UNRELEASED; urgency=low
+
+  [ Petr Salinger ]
+  * based on FreeBSD 7.0
+  * Change packages name to reflect SONAME changes:
+    - libusbhid2   -> libusbhid3
+    - libkiconv2   -> libkiconv3
+    - libdevstat5  -> libdevstat6 
+
+ -- Aurelien Jarno <aurel32@debian.org>  Mon, 23 Jun 2008 12:00:00 +0200
+
 freebsd-libs (6.3-2) UNRELEASED; urgency=low
 
   [ Aurelien Jarno ]
