Upload to unreleased
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@2206 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-freebsd-libs (7.0-1) UNRELEASED; urgency=low
+freebsd-libs (7.0-1) unreleased; urgency=low
 
   [ Petr Salinger ]
   * based on FreeBSD 7.0
@@ -6,16 +6,11 @@ freebsd-libs (7.0-1) UNRELEASED; urgency=low
     - libusbhid2   -> libusbhid3
     - libkiconv2   -> libkiconv3
     - libdevstat5  -> libdevstat6 
-
- -- Aurelien Jarno <aurel32@debian.org>  Mon, 23 Jun 2008 12:00:00 +0200
-
-freebsd-libs (6.3-2) UNRELEASED; urgency=low
+  * Make it buildable with gcc-4.2
 
   [ Aurelien Jarno ]
   * Don't ship useless manpages.
-
-  [ Petr Salinger ]
-  * Make it buildable with gcc-4.2
+  * Bumped Standards-Version to 3.8.0 (no changes).
 
  -- Aurelien Jarno <aurel32@debian.org>  Fri, 11 Jan 2008 10:53:31 +0100
 
