--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+freebsd-libs (7.1-1) unreleased; urgency=low
+
+  [ Petr Salinger ]
+  * based on FreeBSD 7.1
+
+ -- Aurelien Jarno <aurel32@debian.org>  Mon, 05 Jan 2009 10:53:31 +0100
+
 freebsd-libs (7.0-1) unreleased; urgency=low
 
   [ Petr Salinger ]
