* Don't use a tar in tar build system:     - Remove fetch     - Add a get-orig-source target.     - Use quilt to manage patches.     - Remove build-depends on kfreebsd-source-7.1.     - Update patches accordingly.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@2407 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+freebsd-libs (7.1-2) unstable; urgency=low
+
+  * Upload to unstable. 
+  * Don't use a tar in tar build system:
+    - Remove fetch
+    - Add a get-orig-source target.
+    - Use quilt to manage patches.
+    - Remove build-depends on kfreebsd-source-7.1.
+    - Update patches accordingly.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Sun, 05 Apr 2009 15:45:14 +0200
+
 freebsd-libs (7.1-1) unreleased; urgency=low
 
   [ Petr Salinger ]
