--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ freebsd-libs (7.1-2) unstable; urgency=low
     - Use quilt to manage patches.
     - Remove build-depends on kfreebsd-source-7.1.
     - Update patches accordingly.
+  * Change patch level to -p1.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 05 Apr 2009 15:45:14 +0200
 
