* Fix a few bashisms in debian/rules.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@2410 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ freebsd-libs (7.1-2) unstable; urgency=low
     - Remove build-depends on kfreebsd-source-7.1.
     - Update patches accordingly.
   * Change patch level to -p1.
+  * Fix a few bashisms in debian/rules.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 05 Apr 2009 15:45:14 +0200
 
