--- a/debian/changelog
+++ b/debian/changelog
@@ -9,8 +9,9 @@ freebsd-libs (7.1-2) unstable; urgency=low
     - Update patches accordingly.
   * Change patch level to -p1.
   * Fix a few bashisms in debian/rules.
+  * Fix parallel build support in debian/rules. 
 
- -- Aurelien Jarno <aurel32@debian.org>  Sun, 05 Apr 2009 15:45:14 +0200
+ -- Aurelien Jarno <aurel32@debian.org>  Tue, 07 Apr 2009 16:59:04 +0200
 
 freebsd-libs (7.1-1) unreleased; urgency=low
 
