* Install more manpages.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@2413 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ freebsd-libs (7.1-2) unstable; urgency=low
   * Change patch level to -p1.
   * Fix a few bashisms in debian/rules.
   * Fix parallel build support in debian/rules. 
+  * Install more manpages.
 
  -- Aurelien Jarno <aurel32@debian.org>  Tue, 07 Apr 2009 16:59:04 +0200
 
