--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ freebsd-libs (7.1-2) unstable; urgency=low
   * Fix a few bashisms in debian/rules.
   * Fix parallel build support in debian/rules. 
   * Install more manpages.
+  * Switch to debhelper 5.
 
  -- Aurelien Jarno <aurel32@debian.org>  Tue, 07 Apr 2009 16:59:04 +0200
 
