* Bumped Standards-Version to 3.8.1 (no changes).
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@2415 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,7 @@ freebsd-libs (7.1-2) unstable; urgency=low
   * Fix parallel build support in debian/rules. 
   * Install more manpages.
   * Switch to debhelper 5.
+  * Bumped Standards-Version to 3.8.1 (no changes).
 
  -- Aurelien Jarno <aurel32@debian.org>  Tue, 07 Apr 2009 16:59:04 +0200
 
