* Update debian/copyright.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@2419 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,7 @@ freebsd-libs (7.1-2) unstable; urgency=low
   * Install more manpages.
   * Switch to debhelper 5.
   * Bumped Standards-Version to 3.8.1 (no changes).
+  * Update debian/copyright.
 
  -- Aurelien Jarno <aurel32@debian.org>  Tue, 07 Apr 2009 16:59:04 +0200
 
