--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+freebsd-libs (7.1-3) UNRELEASED; urgency=low
+
+  * Use $(filter ...) instead of $(findstring ...) to extract space separated
+    options from DEB_BUILD_OPTIONS.
+
+ -- Guillem Jover <guillem@debian.org>  Sat, 18 Apr 2009 01:52:52 +0200
+
 freebsd-libs (7.1-2) unstable; urgency=low
 
   * Upload to unstable. 
