Line wrap Build-Depends and Depends fields longer than 80 chars
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@2455 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ freebsd-libs (7.1-3) UNRELEASED; urgency=low
 
   * Use $(filter ...) instead of $(findstring ...) to extract space separated
     options from DEB_BUILD_OPTIONS.
+  * Line wrap Build-Depends and Depends fields longer than 80 chars.
 
  -- Guillem Jover <guillem@debian.org>  Sat, 18 Apr 2009 01:52:52 +0200
 
