--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,14 @@
-freebsd-libs (7.1-3) UNRELEASED; urgency=low
+freebsd-libs (7.2-1) UNSTABLE; urgency=low
 
+  [ Guillem Jover ]
   * Use $(filter ...) instead of $(findstring ...) to extract space separated
     options from DEB_BUILD_OPTIONS.
   * Line wrap Build-Depends and Depends fields longer than 80 chars.
 
- -- Guillem Jover <guillem@debian.org>  Sat, 18 Apr 2009 01:52:52 +0200
+    [ Petr Salinger ]
+  * based on FreeBSD 7.2
+
+ -- Guillem Jover <guillem@debian.org>  Mon, 04 May 2009 12:00:00 +0200
 
 freebsd-libs (7.1-2) unstable; urgency=low
 
