* add Vcs-* fields into debian/control
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@2495 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ freebsd-libs (7.2-1) UNSTABLE; urgency=low
 
     [ Petr Salinger ]
   * based on FreeBSD 7.2
+  * add Vcs-* fields into debian/control.
 
  -- Guillem Jover <guillem@debian.org>  Mon, 04 May 2009 12:00:00 +0200
 
