[ Aurelien Jarno ]   * Tighten build-depends on libbsd-dev.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@2572 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,11 +5,14 @@ freebsd-libs (7.2-1) UNSTABLE; urgency=low
     options from DEB_BUILD_OPTIONS.
   * Line wrap Build-Depends and Depends fields longer than 80 chars.
 
-    [ Petr Salinger ]
+  [ Petr Salinger ]
   * based on FreeBSD 7.2
   * add Vcs-* fields into debian/control.
 
- -- Guillem Jover <guillem@debian.org>  Mon, 04 May 2009 12:00:00 +0200
+  [ Aurelien Jarno ]
+  * Tighten build-depends on libbsd-dev.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Sat, 06 Jun 2009 20:58:57 +0200
 
 freebsd-libs (7.1-2) unstable; urgency=low
 
