--- a/debian/changelog
+++ b/debian/changelog
@@ -11,8 +11,9 @@ freebsd-libs (7.2-1) UNSTABLE; urgency=low
 
   [ Aurelien Jarno ]
   * Tighten build-depends on libbsd-dev.
+  * Use SVN server instead of the deprecated CVS server in get-orig-source.
 
- -- Aurelien Jarno <aurel32@debian.org>  Sat, 06 Jun 2009 20:58:57 +0200
+ -- Aurelien Jarno <aurel32@debian.org>  Sat, 06 Jun 2009 21:25:42 +0200
 
 freebsd-libs (7.1-2) unstable; urgency=low
 
