Upload to unstable
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@2574 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-freebsd-libs (7.2-1) UNSTABLE; urgency=low
+freebsd-libs (7.2-1) unstable; urgency=low
 
   [ Guillem Jover ]
   * Use $(filter ...) instead of $(findstring ...) to extract space separated
