--- a/debian/changelog
+++ b/debian/changelog
@@ -12,8 +12,9 @@ freebsd-libs (7.2-1) unstable; urgency=low
   [ Aurelien Jarno ]
   * Tighten build-depends on libbsd-dev.
   * Use SVN server instead of the deprecated CVS server in get-orig-source.
+  * Add -D'__FBSDID(string)=' to CFLAGS, drop debian/patches/00_fbsdid.diff
 
- -- Aurelien Jarno <aurel32@debian.org>  Sat, 06 Jun 2009 21:25:42 +0200
+ -- Aurelien Jarno <aurel32@debian.org>  Sat, 06 Jun 2009 22:15:03 +0200
 
 freebsd-libs (7.1-2) unstable; urgency=low
 
