--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+freebsd-libs (7.2-2) unstable; urgency=low
+
+  * Tighten build-depends on kfreebsd-kernel-headers.
+  * Remove n_un union workarounds.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Mon, 15 Jun 2009 10:47:08 +0200
+
 freebsd-libs (7.2-1) unstable; urgency=low
 
   [ Guillem Jover ]
