* Remove unnecessary linkages with libfreebsd.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@2690 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+freebsd-libs (7.2-3) unstable; urgency=low
+
+  * Remove unnecessary linkages with libfreebsd.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Tue, 04 Aug 2009 08:29:07 +0200
+
 freebsd-libs (7.2-2) unstable; urgency=low
 
   * Tighten build-depends on kfreebsd-kernel-headers.
