--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 freebsd-libs (7.2-3) unstable; urgency=low
 
   * Remove unnecessary linkages with libfreebsd.
+  * Bumped Standards-Version to 3.8.2 (no changes).
 
- -- Aurelien Jarno <aurel32@debian.org>  Tue, 04 Aug 2009 08:29:07 +0200
+ -- Aurelien Jarno <aurel32@debian.org>  Tue, 04 Aug 2009 08:29:46 +0200
 
 freebsd-libs (7.2-2) unstable; urgency=low
 
