* Fix description of libgeom-dev.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@2692 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+freebsd-libs (7.2-4) UNRELEASED; urgency=low
+
+  * Fix description of libgeom-dev. 
+
+ -- Aurelien Jarno <aurel32@debian.org>  Tue, 04 Aug 2009 10:38:29 +0200
+
 freebsd-libs (7.2-3) unstable; urgency=low
 
   * Remove unnecessary linkages with libfreebsd.
