--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 freebsd-libs (7.2-4) UNRELEASED; urgency=low
 
   * Fix description of libgeom-dev. 
+  * libkvm0: use our own copy of getbootfile().
 
  -- Aurelien Jarno <aurel32@debian.org>  Tue, 04 Aug 2009 10:38:29 +0200
 
