--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,13 @@
 freebsd-libs (7.2-4) UNRELEASED; urgency=low
 
+  [ Aurelien Jarno ]
   * Fix description of libgeom-dev. 
   * libkvm0: use our own copy of getbootfile().
 
- -- Aurelien Jarno <aurel32@debian.org>  Tue, 04 Aug 2009 10:38:29 +0200
+  [ Petr Salinger ]
+  * Build-depends on libc0.1-dev (>= 2.10) instead of libfreebsd-dev.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Tue, 27 Oct 2009 10:38:29 +0100
 
 freebsd-libs (7.2-3) unstable; urgency=low
 
