* Fix dependency between lib and -dev packages.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@2812 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,11 +3,12 @@ freebsd-libs (7.2-4) UNRELEASED; urgency=low
   [ Aurelien Jarno ]
   * Fix description of libgeom-dev. 
   * libkvm0: use our own copy of getbootfile().
+  * Fix dependency between lib and -dev packages.
 
   [ Petr Salinger ]
   * Build-depends on libc0.1-dev (>= 2.10) instead of libfreebsd-dev.
 
- -- Aurelien Jarno <aurel32@debian.org>  Tue, 27 Oct 2009 10:38:29 +0100
+ -- Aurelien Jarno <aurel32@debian.org>  Tue, 27 Oct 2009 20:42:24 +0100
 
 freebsd-libs (7.2-3) unstable; urgency=low
 
