--- a/debian/changelog
+++ b/debian/changelog
@@ -4,11 +4,12 @@ freebsd-libs (7.2-4) UNRELEASED; urgency=low
   * Fix description of libgeom-dev. 
   * libkvm0: use our own copy of getbootfile().
   * Fix dependency between lib and -dev packages.
+  * Add README.source.
 
   [ Petr Salinger ]
   * Build-depends on libc0.1-dev (>= 2.10) instead of libfreebsd-dev.
 
- -- Aurelien Jarno <aurel32@debian.org>  Tue, 27 Oct 2009 20:42:24 +0100
+ -- Aurelien Jarno <aurel32@debian.org>  Tue, 27 Oct 2009 20:43:13 +0100
 
 freebsd-libs (7.2-3) unstable; urgency=low
 
