--- a/debian/changelog
+++ b/debian/changelog
@@ -5,11 +5,12 @@ freebsd-libs (7.2-4) UNRELEASED; urgency=low
   * libkvm0: use our own copy of getbootfile().
   * Fix dependency between lib and -dev packages.
   * Add README.source.
+  * Bumped Standards-Version to 3.8.3.
 
   [ Petr Salinger ]
   * Build-depends on libc0.1-dev (>= 2.10) instead of libfreebsd-dev.
 
- -- Aurelien Jarno <aurel32@debian.org>  Tue, 27 Oct 2009 20:43:13 +0100
+ -- Aurelien Jarno <aurel32@debian.org>  Tue, 27 Oct 2009 20:43:58 +0100
 
 freebsd-libs (7.2-3) unstable; urgency=low
 
