--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-freebsd-libs (7.2-4) UNRELEASED; urgency=low
+freebsd-libs (7.2-4) unstable; urgency=low
 
   [ Aurelien Jarno ]
   * Fix description of libgeom-dev. 
@@ -10,7 +10,7 @@ freebsd-libs (7.2-4) UNRELEASED; urgency=low
   [ Petr Salinger ]
   * Build-depends on libc0.1-dev (>= 2.10) instead of libfreebsd-dev.
 
- -- Aurelien Jarno <aurel32@debian.org>  Tue, 27 Oct 2009 20:43:58 +0100
+ -- Aurelien Jarno <aurel32@debian.org>  Tue, 27 Oct 2009 20:44:22 +0100
 
 freebsd-libs (7.2-3) unstable; urgency=low
 
