--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+freebsd-libs (8.0-0) EXPERIMENTAL; urgency=low
+
+  [ Petr Salinger ]
+  * based on FreeBSD 8.0
+  * Change packages name to reflect SONAME changes:
+    - libusbhid3   -> libusbhid4
+    - libkiconv3   -> libkiconv4
+    - libdevstat6  -> libdevstat7
+
+ -- Aurelien Jarno <aurel32@debian.org>  Sat, 14 Nov 2009 10:41:06 +0100
+
 freebsd-libs (7.2-4) unstable; urgency=low
 
   [ Aurelien Jarno ]
