* add libmemstat3 and libmemstat-dev packages,   will be needed by netstat binary
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@2845 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,10 +2,11 @@ freebsd-libs (8.0-0) EXPERIMENTAL; urgency=low
 
   [ Petr Salinger ]
   * based on FreeBSD 8.0
-  * Change packages name to reflect SONAME changes:
+  * change packages name to reflect SONAME changes:
     - libusbhid3   -> libusbhid4
     - libkiconv3   -> libkiconv4
     - libdevstat6  -> libdevstat7
+  * add libmemstat3 and libmemstat-dev packages
 
  -- Aurelien Jarno <aurel32@debian.org>  Sat, 14 Nov 2009 10:41:06 +0100
 
