* add libnetgraph4 and libnetgraph-dev packages
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@2848 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ freebsd-libs (8.0-0) EXPERIMENTAL; urgency=low
     - libkiconv3   -> libkiconv4
     - libdevstat6  -> libdevstat7
   * add libmemstat3 and libmemstat-dev packages
+  * add libnetgraph4 and libnetgraph-dev packages
 
  -- Aurelien Jarno <aurel32@debian.org>  Sat, 14 Nov 2009 10:41:06 +0100
 
