Upload to unstable
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@2866 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-freebsd-libs (8.0-0) EXPERIMENTAL; urgency=low
+freebsd-libs (8.0-1) unstable; urgency=low
 
   [ Petr Salinger ]
   * based on FreeBSD 8.0
@@ -9,7 +9,7 @@ freebsd-libs (8.0-0) EXPERIMENTAL; urgency=low
   * add libmemstat3 and libmemstat-dev packages
   * add libnetgraph4 and libnetgraph-dev packages
 
- -- Aurelien Jarno <aurel32@debian.org>  Sat, 14 Nov 2009 10:41:06 +0100
+ -- Aurelien Jarno <aurel32@debian.org>  Sat, 28 Nov 2009 10:42:15 +0100
 
 freebsd-libs (7.2-4) unstable; urgency=low
 
