* add libusb2 and libusb2-dev packages
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@2879 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+freebsd-libs (8.0-3) UNSTABLE; urgency=low
+
+  [ Petr Salinger ]
+  * bump build-depends on kfreebsd-kernel-headers to (>= 0.45)
+  * add libusb2 and libusb2???-dev packages
+
+ -- Aurelien Jarno <aurel32@debian.org>  Sat, 28 Nov 2009 22:42:32 +0100
+
 freebsd-libs (8.0-2) unstable; urgency=low
 
   * Bump build-depends on kfreebsd-kernel-headers to (>= 0.43).
