--- a/debian/changelog
+++ b/debian/changelog
@@ -2,9 +2,12 @@ freebsd-libs (8.0-3) UNSTABLE; urgency=low
 
   [ Petr Salinger ]
   * bump build-depends on kfreebsd-kernel-headers to (>= 0.45)
-  * add libusb2 and libusb2???-dev packages
+  * add libusb2 and libusb2-dev packages
 
- -- Aurelien Jarno <aurel32@debian.org>  Sat, 28 Nov 2009 22:42:32 +0100
+  [ Aurelien Jarno ]
+  * Make libusb2-dev conflict with libusb-dev.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Sun, 06 Dec 2009 17:12:30 +0100
 
 freebsd-libs (8.0-2) unstable; urgency=low
 
