--- a/debian/changelog
+++ b/debian/changelog
@@ -6,8 +6,9 @@ freebsd-libs (8.0-3) UNSTABLE; urgency=low
 
   [ Aurelien Jarno ]
   * Make libusb2-dev conflict with libusb-dev.
+  * Add a libusb2-udev package. 
 
- -- Aurelien Jarno <aurel32@debian.org>  Sun, 06 Dec 2009 17:12:30 +0100
+ -- Aurelien Jarno <aurel32@debian.org>  Sun, 06 Dec 2009 17:25:51 +0100
 
 freebsd-libs (8.0-2) unstable; urgency=low
 
