* Add pkg-config files matching libusb 0.1/libusb 1.0.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@2888 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,8 +7,9 @@ freebsd-libs (8.0-3) UNSTABLE; urgency=low
   [ Aurelien Jarno ]
   * Make libusb2-dev conflict with libusb-dev.
   * Add a libusb2-udev package. 
+  * Add pkg-config files matching libusb 0.1/libusb 1.0.
 
- -- Aurelien Jarno <aurel32@debian.org>  Sun, 06 Dec 2009 17:25:51 +0100
+ -- Aurelien Jarno <aurel32@debian.org>  Tue, 08 Dec 2009 19:42:24 +0100
 
 freebsd-libs (8.0-2) unstable; urgency=low
 
