--- a/debian/changelog
+++ b/debian/changelog
@@ -8,8 +8,9 @@ freebsd-libs (8.0-3) UNSTABLE; urgency=low
   * Make libusb2-dev conflict with libusb-dev.
   * Add a libusb2-udev package. 
   * Add pkg-config files matching libusb 0.1/libusb 1.0.
+  * Add a libusb-config script matching libusb 0.1.
 
- -- Aurelien Jarno <aurel32@debian.org>  Tue, 08 Dec 2009 19:42:24 +0100
+ -- Aurelien Jarno <aurel32@debian.org>  Tue, 08 Dec 2009 19:48:53 +0100
 
 freebsd-libs (8.0-2) unstable; urgency=low
 
