--- a/debian/changelog
+++ b/debian/changelog
@@ -9,8 +9,9 @@ freebsd-libs (8.0-3) UNSTABLE; urgency=low
   * Add a libusb2-udev package. 
   * Add pkg-config files matching libusb 0.1/libusb 1.0.
   * Add a libusb-config script matching libusb 0.1.
+  * Make libusb2-dev provides libusb-1.0-0-dev.
 
- -- Aurelien Jarno <aurel32@debian.org>  Tue, 08 Dec 2009 19:48:53 +0100
+ -- Aurelien Jarno <aurel32@debian.org>  Tue, 08 Dec 2009 19:51:00 +0100
 
 freebsd-libs (8.0-2) unstable; urgency=low
 
