Upload to unstable
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@2893 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-freebsd-libs (8.0-3) UNSTABLE; urgency=low
+freebsd-libs (8.0-3) unstable; urgency=low
 
   [ Petr Salinger ]
   * bump build-depends on kfreebsd-kernel-headers to (>= 0.45)
@@ -11,7 +11,7 @@ freebsd-libs (8.0-3) UNSTABLE; urgency=low
   * Add a libusb-config script matching libusb 0.1.
   * Make libusb2-dev provides libusb-1.0-0-dev.
 
- -- Aurelien Jarno <aurel32@debian.org>  Tue, 08 Dec 2009 19:51:00 +0100
+ -- Aurelien Jarno <aurel32@debian.org>  Wed, 09 Dec 2009 02:03:24 +0100
 
 freebsd-libs (8.0-2) unstable; urgency=low
 
