* libusb2-dev: add a libusb-1.0.so -> libusb.so symlink to make     configure scripts happy.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@2908 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+freebsd-libs (8.0-4) UNRELEASED; urgency=low
+
+  * libusb2-dev: add a libusb-1.0.so -> libusb.so symlink to make
+    configure scripts happy.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Fri, 08 Jan 2010 00:21:20 +0100
+
 freebsd-libs (8.0-3) unstable; urgency=low
 
   [ Petr Salinger ]
