--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-freebsd-libs (8.0-4) UNRELEASED; urgency=low
+freebsd-libs (8.0-4) unstable; urgency=low
 
   * libusb2-dev: add a libusb-1.0.so -> libusb.so symlink to make
     configure scripts happy.
   * Add patches/13_libusb-update.diff from upstream to update the API.
   * Add udeb package to libusb2's shlib.
 
- -- Aurelien Jarno <aurel32@debian.org>  Fri, 08 Jan 2010 11:52:33 +0100
+ -- Aurelien Jarno <aurel32@debian.org>  Fri, 08 Jan 2010 14:17:42 +0100
 
 freebsd-libs (8.0-3) unstable; urgency=low
 
