--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+freebsd-libs (8.0-4.1) UNRELEASED; urgency=low
+
+  * Use kfreebsd-any instead of explicit architecture list.
+
+ -- Guillem Jover <guillem@debian.org>  Mon, 28 Jun 2010 21:35:43 +0200
+
 freebsd-libs (8.0-4) unstable; urgency=low
 
   * libusb2-dev: add a libusb-1.0.so -> libusb.so symlink to make
