--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
-freebsd-libs (8.0-4.1) UNRELEASED; urgency=low
+freebsd-libs (8.0-5) unstable; urgency=low
 
+  [ Guillem Jover ]
   * Use kfreebsd-any instead of explicit architecture list.
 
- -- Guillem Jover <guillem@debian.org>  Mon, 28 Jun 2010 21:35:43 +0200
+  [ Aurelien Jarno ]
+  * Add libgeom0 and libipx2 udeb packages. 
+
+ -- Aurelien Jarno <aurel32@debian.org>  Mon, 28 Jun 2010 23:10:06 +0200
 
 freebsd-libs (8.0-4) unstable; urgency=low
 
