--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+freebsd-libs (8.1-0) UNRELEASED; urgency=low
+
+  [ Petr Salinger ]
+  * based on FreeBSD 8.1
+    drop 13_libusb-update.diff, applied upstream
+    update 09_libusbhid.diff
+
+ -- Aurelien Jarno <aurel32@debian.org>  Mon, 28 Jun 2010 23:10:06 +0200
+
 freebsd-libs (8.0-5) unstable; urgency=low
 
   [ Guillem Jover ]
