* Add a libusbhid-common package containing usb_hid_usages. Closes:     bug#578678.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@3080 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,16 @@
-freebsd-libs (8.1-0) UNRELEASED; urgency=low
+freebsd-libs (8.1-1) UNRELEASED; urgency=low
 
   [ Petr Salinger ]
   * based on FreeBSD 8.1
     drop 13_libusb-update.diff, applied upstream
     update 09_libusbhid.diff
 
- -- Aurelien Jarno <aurel32@debian.org>  Mon, 28 Jun 2010 23:10:06 +0200
+  [ Aurelien Jarno ]
+  * Bumped Standards-Version to 3.9.1.
+  * Add a libusbhid-common package containing usb_hid_usages. Closes: 
+    bug#578678.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Mon, 26 Jul 2010 23:16:52 +0200
 
 freebsd-libs (8.0-5) unstable; urgency=low
 
