Upload to unstable
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@3089 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-freebsd-libs (8.1-1) UNRELEASED; urgency=low
+freebsd-libs (8.1-1) unstable; urgency=low
 
   [ Petr Salinger ]
   * based on FreeBSD 8.1
@@ -10,7 +10,7 @@ freebsd-libs (8.1-1) UNRELEASED; urgency=low
   * Add a libusbhid-common package containing usb_hid_usages. Closes: 
     bug#578678.
 
- -- Aurelien Jarno <aurel32@debian.org>  Mon, 26 Jul 2010 23:16:52 +0200
+ -- Aurelien Jarno <aurel32@debian.org>  Wed, 28 Jul 2010 20:21:25 +0200
 
 freebsd-libs (8.0-5) unstable; urgency=low
 
