--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+freebsd-libs (8.1-2) UNRELEASED; urgency=low
+
+  [ Aurelien Jarno ]
+  * Link all libraries dynamically with each other.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Thu, 29 Jul 2010 21:47:27 +0200
+
 freebsd-libs (8.1-1) unstable; urgency=low
 
   [ Petr Salinger ]
