--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ freebsd-libs (8.1-2) UNRELEASED; urgency=low
 
   [ Aurelien Jarno ]
   * Link all libraries dynamically with each other.
+  * Don't install PIC variant of the static libraries.
 
- -- Aurelien Jarno <aurel32@debian.org>  Thu, 29 Jul 2010 21:47:27 +0200
+ -- Aurelien Jarno <aurel32@debian.org>  Thu, 29 Jul 2010 22:04:16 +0200
 
 freebsd-libs (8.1-1) unstable; urgency=low
 
