Upload to unstable
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@3123 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-freebsd-libs (8.1-2) UNRELEASED; urgency=low
+freebsd-libs (8.1-2) unstable; urgency=low
 
   [ Aurelien Jarno ]
   * Link all libraries dynamically with each other.
   * Don't install PIC variant of the static libraries.
 
- -- Aurelien Jarno <aurel32@debian.org>  Thu, 29 Jul 2010 22:04:16 +0200
+ -- Aurelien Jarno <aurel32@debian.org>  Fri, 30 Jul 2010 17:55:59 +0200
 
 freebsd-libs (8.1-1) unstable; urgency=low
 
