--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+freebsd-libs (8.1-3) unstable; urgency=low
+
+  * Don't install libusbhid-dev link in libusb-dev.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Sat, 31 Jul 2010 23:57:14 +0200
+
 freebsd-libs (8.1-2) unstable; urgency=low
 
   [ Aurelien Jarno ]
