* Add a libsbuf0-udeb package.   * Add "(udeb)" to the short description of all udeb packages.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@3168 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+freebsd-libs (8.1-4) unstable; urgency=low
+
+  * Add a libsbuf0-udeb package.
+  * Add "(udeb)" to the short description of all udeb packages.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Fri, 20 Aug 2010 20:01:41 +0200
+
 freebsd-libs (8.1-3) unstable; urgency=low
 
   * Don't install libusbhid-dev link in libusb-dev.
