* libusb2: fix USB devices detection. Closes: bug#594330.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@3173 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+freebsd-libs (8.1-5) UNRELEASED; urgency=low
+
+  * libusb2: fix USB devices detection. Closes: bug#594330.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Wed, 25 Aug 2010 22:49:59 +0200
+
 freebsd-libs (8.1-4) unstable; urgency=low
 
   * Add a libsbuf0-udeb package.
