Upload to unstable
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@3174 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-freebsd-libs (8.1-5) UNRELEASED; urgency=low
+freebsd-libs (8.1-5) unstable; urgency=low
 
   * libusb2: fix USB devices detection. Closes: bug#594330.
 
- -- Aurelien Jarno <aurel32@debian.org>  Wed, 25 Aug 2010 22:49:59 +0200
+ -- Aurelien Jarno <aurel32@debian.org>  Thu, 26 Aug 2010 00:29:47 +0200
 
 freebsd-libs (8.1-4) unstable; urgency=low
 
