Build libsbuf-dev on non-kFreeBSD systems.  (Closes: #602766)
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@3224 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+freebsd-libs (8.1-6) UNRELEASED; urgency=low
+
+  * Build libsbuf-dev on non-kFreeBSD systems.  (Closes: #602766)
+
+ -- Robert Millan <rmh@debian.org>  Mon, 10 Jan 2011 16:01:31 +0100
+
 freebsd-libs (8.1-5) unstable; urgency=low
 
   * libusb2: fix USB devices detection. Closes: bug#594330.
