Now using Standards-Version 3.9.2 (no changes needed)
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@3310 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,10 @@
 freebsd-libs (8.2-1) UNRELEASED; urgency=low
 
+  [ Robert Millan ]
   * Build libsbuf-dev on non-kFreeBSD systems.  (Closes: #602766)
+
+  [ Guillem Jover ]
+  * Now using Standards-Version 3.9.2 (no changes needed).
 
  -- Robert Millan <rmh@debian.org>  Mon, 10 Jan 2011 16:01:31 +0100
 
