--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,11 @@ freebsd-libs (8.2-1) UNRELEASED; urgency=low
 
   [ Guillem Jover ]
   * Now using Standards-Version 3.9.2 (no changes needed).
+  * Switch to source format “3.0 (quilt)”.
+    - Remove quilt from Build-Depends.
+    - Remove patch target in debian/rules.
+    - Remove now unneeded README.source.
+    - Refresh all patches.
 
  -- Robert Millan <rmh@debian.org>  Mon, 10 Jan 2011 16:01:31 +0100
 
