Add mention of new upstream release
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@3332 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,8 @@
 freebsd-libs (8.2-1) UNRELEASED; urgency=low
 
+  [ Petr Salinger ]
+  * Based on FreeBSD 8.2.
+
   [ Robert Millan ]
   * Build libsbuf-dev on non-kFreeBSD systems.  (Closes: #602766)
 
