Add myself to Uploaders
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@3339 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,7 @@ freebsd-libs (8.2-1) UNRELEASED; urgency=low
     - Remove patch target in debian/rules.
     - Remove now unneeded README.source.
     - Refresh all patches.
+  * Add myself to Uploaders.
 
  -- Robert Millan <rmh@debian.org>  Mon, 10 Jan 2011 16:01:31 +0100
 
