Refactor source and tar name into SOURCE and TARNAME in debian/rules
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@3343 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,7 @@ freebsd-libs (8.2-1) UNRELEASED; urgency=low
     - Remove now unneeded README.source.
     - Refresh all patches.
   * Add myself to Uploaders.
+  * Refactor source and tar name into SOURCE and TARNAME in debian/rules.
 
  -- Robert Millan <rmh@debian.org>  Mon, 10 Jan 2011 16:01:31 +0100
 
