--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,7 @@ freebsd-libs (8.2-1) UNRELEASED; urgency=low
     - Refresh all patches.
   * Add myself to Uploaders.
   * Refactor source and tar name into SOURCE and TARNAME in debian/rules.
+  * Line-wrap CFLAGS and PMAKE variables in debian/rules.
 
  -- Robert Millan <rmh@debian.org>  Mon, 10 Jan 2011 16:01:31 +0100
 
