--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,8 @@ freebsd-libs (8.2-1) UNRELEASED; urgency=low
   * Add myself to Uploaders.
   * Refactor source and tar name into SOURCE and TARNAME in debian/rules.
   * Line-wrap CFLAGS and PMAKE variables in debian/rules.
+  * Intersperse Build-Depends description comments between the actual
+    dependencies.
 
  -- Robert Millan <rmh@debian.org>  Mon, 10 Jan 2011 16:01:31 +0100
 
