Set numeric user and group id to 0 for files in get-orig-source
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@3368 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,7 @@ freebsd-libs (8.2-1) UNRELEASED; urgency=low
   * Line-wrap CFLAGS and PMAKE variables in debian/rules.
   * Intersperse Build-Depends description comments between the actual
     dependencies.
+  * Set numeric user and group id to 0 for files in get-orig-source.
 
  -- Robert Millan <rmh@debian.org>  Mon, 10 Jan 2011 16:01:31 +0100
 
