--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,7 @@ freebsd-libs (8.2-1) UNRELEASED; urgency=low
   * Intersperse Build-Depends description comments between the actual
     dependencies.
   * Set numeric user and group id to 0 for files in get-orig-source.
+  * Add symbols files for all shared libraries.
 
  -- Robert Millan <rmh@debian.org>  Mon, 10 Jan 2011 16:01:31 +0100
 
