--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-freebsd-libs (8.2-1) UNRELEASED; urgency=low
+freebsd-libs (8.2-1) unstable; urgency=low
 
   [ Petr Salinger ]
   * Based on FreeBSD 8.2.
@@ -21,7 +21,7 @@ freebsd-libs (8.2-1) UNRELEASED; urgency=low
   * Set numeric user and group id to 0 for files in get-orig-source.
   * Add symbols files for all shared libraries.
 
- -- Robert Millan <rmh@debian.org>  Mon, 10 Jan 2011 16:01:31 +0100
+ -- Guillem Jover <guillem@debian.org>  Tue, 07 Jun 2011 07:43:42 +0200
 
 freebsd-libs (8.1-5) unstable; urgency=low
 
