Remove ‘XC-’ prefix from Package-Type field
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@3430 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ freebsd-libs (8.2-2) UNRELEASED; urgency=low
     - Bump libbsd-dev Build-Depends to (>= 0.3.0).
     - Add pkg-config to Build-Depends.
     - Remove some now obsolete porting code.
+  * Remove ‘XC-’ prefix from Package-Type field.
 
  -- Guillem Jover <guillem@debian.org>  Wed, 08 Jun 2011 03:17:34 +0200
 
