--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,9 @@ freebsd-libs (8.2-2) UNRELEASED; urgency=low
     - Add pkg-config to Build-Depends.
     - Remove some now obsolete porting code.
   * Remove ‘XC-’ prefix from Package-Type field.
+  * Make <sys/sbuf.h> usable:
+    - Change __va_list to va_list.
+    - Include <sys/types.h> and <stdarg.h>.
 
  -- Guillem Jover <guillem@debian.org>  Wed, 08 Jun 2011 03:17:34 +0200
 
