--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-freebsd-libs (8.2-2) UNRELEASED; urgency=low
+freebsd-libs (8.2-2) unstable; urgency=low
 
   * Switch to use the libbsd-overlay:
     - Bump libbsd-dev Build-Depends to (>= 0.3.0).
@@ -9,7 +9,7 @@ freebsd-libs (8.2-2) UNRELEASED; urgency=low
     - Change __va_list to va_list.
     - Include <sys/types.h> and <stdarg.h>.
 
- -- Guillem Jover <guillem@debian.org>  Wed, 08 Jun 2011 03:17:34 +0200
+ -- Guillem Jover <guillem@debian.org>  Wed, 08 Jun 2011 03:37:15 +0200
 
 freebsd-libs (8.2-1) unstable; urgency=low
 
