--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+freebsd-libs (8.2-3) UNRELEASED; urgency=low
+
+  * Bump libgeom SOVERSION from 0 to 1 and rename package libgeom0 to
+    libgeom1, due to ABI changes in ‘struct gprovider’. (Closes: #630107)
+
+ -- Guillem Jover <guillem@debian.org>  Sun, 12 Jun 2011 03:27:53 +0200
+
 freebsd-libs (8.2-2) unstable; urgency=low
 
   * Switch to use the libbsd-overlay:
