Add new libjail library packages
Based-on-patch-by: Robert Millan <rmh@debian.org>

Closes: #629521


git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@3438 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,9 @@
-freebsd-libs (8.2-3) UNRELEASED; urgency=low
+freebsd-libs (8.2+ds1-1) UNRELEASED; urgency=low
 
   * Bump libgeom SOVERSION from 0 to 1 and rename package libgeom0 to
     libgeom1, due to ABI changes in ‘struct gprovider’. (Closes: #630107)
+  * Add new libjail library packages. Based on a patch by Robert Millan.
+    (Closes: #629521)
 
  -- Guillem Jover <guillem@debian.org>  Sun, 12 Jun 2011 03:27:53 +0200
 
