Update copyright holders and years in debian/copyright
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@3445 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ freebsd-libs (8.2+ds1-1) UNRELEASED; urgency=low
     libgeom1, due to ABI changes in ‘struct gprovider’. (Closes: #630107)
   * Add new libjail library packages. Based on a patch by Robert Millan.
     (Closes: #629521)
+  * Update copyright holders and years in debian/copyright.
 
  -- Guillem Jover <guillem@debian.org>  Sun, 12 Jun 2011 03:27:53 +0200
 
