Integrate svn exports of single files into the main svn export loop
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@3446 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ freebsd-libs (8.2+ds1-1) UNRELEASED; urgency=low
   * Add new libjail library packages. Based on a patch by Robert Millan.
     (Closes: #629521)
   * Update copyright holders and years in debian/copyright.
+  * Integrate svn exports of single files into the main svn export loop.
 
  -- Guillem Jover <guillem@debian.org>  Sun, 12 Jun 2011 03:27:53 +0200
 
