Do not build profile libraries, which we don't use anyway
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@3447 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ freebsd-libs (8.2+ds1-1) UNRELEASED; urgency=low
     (Closes: #629521)
   * Update copyright holders and years in debian/copyright.
   * Integrate svn exports of single files into the main svn export loop.
+  * Do not build profile libraries, which we don't use anyway.
 
  -- Guillem Jover <guillem@debian.org>  Sun, 12 Jun 2011 03:27:53 +0200
 
