--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-freebsd-libs (8.2+ds1-1) UNRELEASED; urgency=low
+freebsd-libs (8.2+ds1-1) unstable; urgency=low
 
   * Bump libgeom SOVERSION from 0 to 1 and rename package libgeom0 to
     libgeom1, due to ABI changes in ‘struct gprovider’. (Closes: #630107)
@@ -8,7 +8,7 @@ freebsd-libs (8.2+ds1-1) UNRELEASED; urgency=low
   * Integrate svn exports of single files into the main svn export loop.
   * Do not build profile libraries, which we don't use anyway.
 
- -- Guillem Jover <guillem@debian.org>  Sun, 12 Jun 2011 03:27:53 +0200
+ -- Guillem Jover <guillem@debian.org>  Wed, 15 Jun 2011 22:48:21 +0200
 
 freebsd-libs (8.2-2) unstable; urgency=low
 
