--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+freebsd-libs (8.2+ds1-2) UNRELEASED; urgency=low
+
+  * Replace use of __aligned() in libusb.h and libusb20_desc.h.
+    (Closes: #631544)
+
+ -- Robert Millan <rmh@debian.org>  Fri, 24 Jun 2011 22:15:36 +0200
+
 freebsd-libs (8.2+ds1-1) unstable; urgency=low
 
   * Bump libgeom SOVERSION from 0 to 1 and rename package libgeom0 to
