--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,10 @@ freebsd-libs (8.2+ds1-2) UNRELEASED; urgency=low
 
   * Replace use of __aligned() in libusb.h and libusb20_desc.h.
     (Closes: #631544)
+  * Build-Depend on libbsd-dev everywhere, not just [kfreebsd-any]
+    (fixes FTBFS on non-kFreeBSD).
 
- -- Robert Millan <rmh@debian.org>  Fri, 24 Jun 2011 22:15:36 +0200
+ -- Robert Millan <rmh@debian.org>  Sun, 26 Jun 2011 17:11:53 +0200
 
 freebsd-libs (8.2+ds1-1) unstable; urgency=low
 
