--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ freebsd-libs (8.2+ds1-2) UNRELEASED; urgency=low
     (Closes: #631544)
   * Build-Depend on libbsd-dev everywhere, not just [kfreebsd-any]
     (fixes FTBFS on non-kFreeBSD).
+  * 14_sbuf_page_size.diff: PAGE_SIZE is not available on all
+    platforms (fixes FTBFS on armel, ia64, powerpc, sparc).
 
  -- Robert Millan <rmh@debian.org>  Sun, 26 Jun 2011 17:11:53 +0200
 
