Add myself to Uploaders, upload to unstable.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@3490 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-freebsd-libs (8.2+ds1-2) UNRELEASED; urgency=low
+freebsd-libs (8.2+ds1-2) unstable; urgency=low
 
   * Replace use of __aligned() in libusb.h and libusb20_desc.h.
     (Closes: #631544)
@@ -6,8 +6,9 @@ freebsd-libs (8.2+ds1-2) UNRELEASED; urgency=low
     (fixes FTBFS on non-kFreeBSD).
   * 14_sbuf_page_size.diff: PAGE_SIZE is not available on all
     platforms (fixes FTBFS on armel, ia64, powerpc, sparc).
+  * Add myself to Uploaders.
 
- -- Robert Millan <rmh@debian.org>  Sun, 26 Jun 2011 17:11:53 +0200
+ -- Robert Millan <rmh@debian.org>  Sun, 26 Jun 2011 17:53:53 +0200
 
 freebsd-libs (8.2+ds1-1) unstable; urgency=low
 
