--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+freebsd-libs (8.2+ds1-3) UNRELEASED; urgency=low
+
+  * Remove hunk to include <sys/user.h> in subr_sbuf.c, as this breaks
+    hurd-i386.
+
+ -- Robert Millan <rmh@debian.org>  Sun, 03 Jul 2011 13:41:34 +0200
+
 freebsd-libs (8.2+ds1-2) unstable; urgency=low
 
   * Replace use of __aligned() in libusb.h and libusb20_desc.h.
