Replace 14_sbuf_page_size.diff with cherry-picked 00_sbuf_page_size.diff from HEAD, which fixes the same problem differently.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@3526 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,11 @@ freebsd-libs (8.2+ds1-3) UNRELEASED; urgency=low
 
   * Remove hunk to include <sys/user.h> in subr_sbuf.c, as this breaks
     hurd-i386.
+  * Replace 14_sbuf_page_size.diff with cherry-picked
+    00_sbuf_page_size.diff from HEAD, which fixes the same problem
+    differently.
 
- -- Robert Millan <rmh@debian.org>  Sun, 03 Jul 2011 13:41:34 +0200
+ -- Robert Millan <rmh@debian.org>  Sun, 03 Jul 2011 16:21:31 +0200
 
 freebsd-libs (8.2+ds1-2) unstable; urgency=low
 
