Upload to unstable.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@3531 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-freebsd-libs (8.2+ds1-3) UNRELEASED; urgency=low
+freebsd-libs (8.2+ds1-3) unstable; urgency=low
 
   * Remove hunk to include <sys/user.h> in subr_sbuf.c, as this breaks
     hurd-i386.
@@ -6,7 +6,7 @@ freebsd-libs (8.2+ds1-3) UNRELEASED; urgency=low
     00_sbuf_page_size.diff from HEAD, which fixes the same problem
     differently.
 
- -- Robert Millan <rmh@debian.org>  Sun, 03 Jul 2011 16:21:31 +0200
+ -- Robert Millan <rmh@debian.org>  Sun, 03 Jul 2011 19:03:40 +0200
 
 freebsd-libs (8.2+ds1-2) unstable; urgency=low
 
