Include <stdint.h> in a few more headers that use uintxx_t types.  (Closes: #634752)
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@3619 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+freebsd-libs (8.2+ds1-4) UNRELEASED; urgency=low
+
+  * Include <stdint.h> in a few more headers that use uintxx_t types.
+    (Closes: #634752)
+
+ -- Robert Millan <rmh@debian.org>  Tue, 19 Jul 2011 22:28:40 +0200
+
 freebsd-libs (8.2+ds1-3) unstable; urgency=low
 
   * Remove hunk to include <sys/user.h> in subr_sbuf.c, as this breaks
