* Move libsbuf.so.0 to /lib (needed by /sbin/zfs and /sbin/zpool).     (Closes: #637100)   * Move libipx.so.2 to /lib (needed by ifconfig).
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@3677 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,11 @@ freebsd-libs (8.2+ds1-4) UNRELEASED; urgency=low
 
   * Include <stdint.h> in a few more headers that use uintxx_t types.
     (Closes: #634752)
+  * Move libsbuf.so.0 to /lib (needed by /sbin/zfs and /sbin/zpool).
+    (Closes: #637100)
+  * Move libipx.so.2 to /lib (needed by ifconfig).
 
- -- Robert Millan <rmh@debian.org>  Tue, 19 Jul 2011 22:28:40 +0200
+ -- Robert Millan <rmh@debian.org>  Mon, 08 Aug 2011 14:20:39 +0000
 
 freebsd-libs (8.2+ds1-3) unstable; urgency=low
 
