Upload to unstable
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@3678 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-freebsd-libs (8.2+ds1-4) UNRELEASED; urgency=low
+freebsd-libs (8.2+ds1-4) unstable; urgency=low
 
   * Include <stdint.h> in a few more headers that use uintxx_t types.
     (Closes: #634752)
@@ -6,7 +6,7 @@ freebsd-libs (8.2+ds1-4) UNRELEASED; urgency=low
     (Closes: #637100)
   * Move libipx.so.2 to /lib (needed by ifconfig).
 
- -- Robert Millan <rmh@debian.org>  Mon, 08 Aug 2011 14:20:39 +0000
+ -- Robert Millan <rmh@debian.org>  Mon, 08 Aug 2011 14:34:50 +0000
 
 freebsd-libs (8.2+ds1-3) unstable; urgency=low
 
