Add libalias, using patch from Christoph Egger with some adjustments. (Closes: #653193)
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@3954 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+freebsd-libs (8.2+ds2-1) unstable; urgency=low
+
+  * Add libalias, using patch from Christoph Egger with some adjustments.
+    (Closes: #653193)
+
+ -- Robert Millan <rmh@debian.org>  Sun, 01 Jan 2012 15:37:48 +0100
+
 freebsd-libs (8.2+ds1-4) unstable; urgency=low
 
   * Include <stdint.h> in a few more headers that use uintxx_t types.
