--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+freebsd-libs (8.2+ds2-2) UNRELEASED; urgency=low
+
+  * Build-depend on libncurses5-dev (for libalias).
+
+ -- Robert Millan <rmh@debian.org>  Sat, 07 Jan 2012 13:20:25 +0100
+
 freebsd-libs (8.2+ds2-1) unstable; urgency=low
 
   * Add libalias, using patch from Christoph Egger with some adjustments.
