Fix undefined reference to ip_next. Thanks Christoph Egger. (Closes: #654581)
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@3959 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
 freebsd-libs (8.2+ds2-2) UNRELEASED; urgency=low
 
   * Build-depend on libncurses5-dev (for libalias).
+  * Fix undefined reference to ip_next. Thanks Christoph Egger.
+    (Closes: #654581)
 
- -- Robert Millan <rmh@debian.org>  Sat, 07 Jan 2012 13:20:25 +0100
+ -- Robert Millan <rmh@debian.org>  Sat, 07 Jan 2012 14:24:10 +0100
 
 freebsd-libs (8.2+ds2-1) unstable; urgency=low
 
