--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-freebsd-libs (8.2+ds2-2) UNRELEASED; urgency=low
+freebsd-libs (8.2+ds2-2) unstable; urgency=low
 
   * Build-depend on libncurses5-dev (for libalias).
   * Fix undefined reference to ip_next. Thanks Christoph Egger.
     (Closes: #654581)
 
- -- Robert Millan <rmh@debian.org>  Sat, 07 Jan 2012 14:24:10 +0100
+ -- Robert Millan <rmh@debian.org>  Sun, 08 Jan 2012 16:20:31 +0100
 
 freebsd-libs (8.2+ds2-1) unstable; urgency=low
 
