New upstream snapshot
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@3971 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+freebsd-libs (8.3~svn229725-1) UNRELEASED; urgency=low
+
+  * New upstream snapshot.
+
+ -- Robert Millan <rmh@debian.org>  Sun, 08 Jan 2012 18:42:53 +0100
+
 freebsd-libs (8.2+ds2-2) unstable; urgency=low
 
   * Build-depend on libncurses5-dev (for libalias).
