--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-freebsd-libs (8.3~svn229725-1) UNRELEASED; urgency=low
+freebsd-libs (8.3~svn229725-1) experimental; urgency=low
 
   * New upstream snapshot.
 
