--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+freebsd-libs (8.3~svn229725-2) unstable; urgency=low
+
+  * Upload to unstable.
+
+ -- Robert Millan <rmh@debian.org>  Sat, 14 Jan 2012 21:42:00 +0100
+
 freebsd-libs (8.3~svn229725-1) experimental; urgency=low
 
   * New upstream snapshot.
