Remove 15_kkh_kludge.diff, depend on recent k-k-h instead.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@3979 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+freebsd-libs (8.3~svn229725-3) UNRELEASED; urgency=low
+
+  * Remove 15_kkh_kludge.diff, depend on recent k-k-h instead.
+
+ -- Robert Millan <rmh@debian.org>  Tue, 17 Jan 2012 20:39:00 +0100
+
 freebsd-libs (8.3~svn229725-2) unstable; urgency=low
 
   * Upload to unstable.
