cpumask_t.diff: Workaround for removal of cpumask_t in kfreebsd-9 headers.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@3992 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
 freebsd-libs (8.3~svn229725-3) UNRELEASED; urgency=low
 
   * Remove 15_kkh_kludge.diff, depend on recent k-k-h instead.
+  * cpumask_t.diff: Workaround for removal of cpumask_t in kfreebsd-9
+    headers.
 
- -- Robert Millan <rmh@debian.org>  Tue, 17 Jan 2012 20:39:00 +0100
+ -- Robert Millan <rmh@debian.org>  Sat, 21 Jan 2012 01:00:47 +0100
 
 freebsd-libs (8.3~svn229725-2) unstable; urgency=low
 
