--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,10 @@ freebsd-libs (8.3~svn229725-3) UNRELEASED; urgency=low
   * Remove 15_kkh_kludge.diff, depend on recent k-k-h instead.
   * cpumask_t.diff: Workaround for removal of cpumask_t in kfreebsd-9
     headers.
+  * cdefs_macros.diff: Replace all use of BSDish cdefs macros that
+    affect exported headers.  (Closes: #656562)
 
- -- Robert Millan <rmh@debian.org>  Sat, 21 Jan 2012 01:00:47 +0100
+ -- Robert Millan <rmh@debian.org>  Sat, 21 Jan 2012 01:21:17 +0100
 
 freebsd-libs (8.3~svn229725-2) unstable; urgency=low
 
