Upload to unstable
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@3995 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-freebsd-libs (8.3~svn229725-3) UNRELEASED; urgency=low
+freebsd-libs (8.3~svn229725-3) unstable; urgency=low
 
   * Remove 15_kkh_kludge.diff, depend on recent k-k-h instead.
   * cpumask_t.diff: Workaround for removal of cpumask_t in kfreebsd-9
