New upstream release.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@4046 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+freebsd-libs (9.0-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+
+ -- Robert Millan <rmh@debian.org>  Sun, 29 Jan 2012 13:19:31 +0100
+
 freebsd-libs (8.3~svn229725-3) unstable; urgency=low
 
   * Remove 15_kkh_kludge.diff, depend on recent k-k-h instead.
