Fix libnetgraph4 Description. (Closes: #658501)
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@4058 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+freebsd-libs (9.0-2) UNRELEASED; urgency=low
+
+  [ Jérémy Bobbio ]
+  * Fix libnetgraph4 Description. (Closes: #658501)
+
+ -- Robert Millan <rmh@debian.org>  Fri, 03 Feb 2012 20:30:40 +0100
+
 freebsd-libs (9.0-1) unstable; urgency=low
 
   * New upstream release.
