--- a/debian/changelog
+++ b/debian/changelog
@@ -3,7 +3,11 @@ freebsd-libs (9.0-2) UNRELEASED; urgency=low
   [ Jérémy Bobbio ]
   * Fix libnetgraph4 Description. (Closes: #658501)
 
- -- Robert Millan <rmh@debian.org>  Fri, 03 Feb 2012 20:30:40 +0100
+  [ Robert Millan ]
+  * libsbuf6.symbols: Remove sbuf_overflowed (it wasn't present in 9.0-
+    1).
+
+ -- Robert Millan <rmh@debian.org>  Wed, 15 Feb 2012 22:14:44 +0100
 
 freebsd-libs (9.0-1) unstable; urgency=low
 
