Remove all CAM kernel headers to ensure system-wide version is used instead.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@4094 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,8 +6,10 @@ freebsd-libs (9.0-2) UNRELEASED; urgency=low
   [ Robert Millan ]
   * libsbuf6.symbols: Remove sbuf_overflowed (it wasn't present in 9.0-
     1).
+  * Remove all CAM kernel headers to ensure system-wide version is used
+    instead.
 
- -- Robert Millan <rmh@debian.org>  Wed, 15 Feb 2012 22:14:44 +0100
+ -- Robert Millan <rmh@debian.org>  Wed, 15 Feb 2012 22:15:49 +0100
 
 freebsd-libs (9.0-1) unstable; urgency=low
 
