--- a/debian/changelog
+++ b/debian/changelog
@@ -8,8 +8,9 @@ freebsd-libs (9.0-2) UNRELEASED; urgency=low
     1).
   * Remove all CAM kernel headers to ensure system-wide version is used
     instead.
+  * Require kfreebsd-kernel-headers >= 0.73 (for sys/_stdint.h).
 
- -- Robert Millan <rmh@debian.org>  Wed, 15 Feb 2012 22:15:49 +0100
+ -- Robert Millan <rmh@debian.org>  Wed, 15 Feb 2012 22:16:53 +0100
 
 freebsd-libs (9.0-1) unstable; urgency=low
 
